Adding new project - 10k Run

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Project 1<br /></a></h2>
+										<h2><a href="https://github.com/TRosario619/FNB-Maputo-10K-Run-Analysis">FNB Maputo 10K Analysis <br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://github.com/TRosario619/FNB-Maputo-10K-Run-Analysis" class="image fit"><img src="images/fnbmpt10k.png" alt="" /></a>
+									<p>This project explores the results dataset of a 2023 running event I participated, with the aim of answering specific questions through data analysis with Python and SQL.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/TRosario619/FNB-Maputo-10K-Run-Analysis" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
